# rust-public

.github/workflows/: build-color_palette_extract.yaml  build-html_parsing_tools.yaml  build-human_name_parser.yaml  build-lzstring.yaml  build-tech_detector.yaml
color_palette_extract/: .hash  Cargo.toml  Dockerfile  pyproject.toml
color_palette_extract/src/: lib.rs
html_parsing_tools/: .hash  Cargo.toml  Dockerfile  pyproject.toml
html_parsing_tools/src/: lib.rs  text_nodes.rs  utils.rs
human_name_parser/: .hash  Cargo.toml  Dockerfile  pyproject.toml
human_name_parser/src/: lib.rs
lzstring/: Cargo.toml  README.md  pyproject.toml  run.py
lzstring/lzstring_optimized/: __init__.py  lzstring_optimized.pyi
lzstring/src/: lib.rs
tech_detector/: Cargo.toml  pyproject.toml
tech_detector/src/: dom.rs  lib.rs  patterns.rs
