# rustimport

[package]
name = "html_parsing_tools"
version = "0.43.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "html_parsing_tools"
crate-type = ["cdylib"]

[dependencies]
kuchiki = "0.8.1"
lazy_static = "1.5.0"
linkify = "0.10.0"
pyo3 = "0.22.6"
rayon = "1.10.0"
regex = "1.11.1"
rust_iso3166 = "0.1.13"
unicode-general-category = "1.0.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
