[package]
name = "lzstring_optimized"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lzstring_optimized"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
lz-str = { git = "https://github.com/spl0i7/lz-str-rs" }
