[package]
name = "tech_detector"
version = "0.1.0"
edition = "2021"

[lib]
name = "tech_detector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
